01-events/02-resources/fortune-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: corp-gateway
  labels:
    name: corp-gateway
  namespace: playground
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    # 192.168.39.240
    hostname: "*.192.168.39.240.nip.io"

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dov-httproute
  namespace: playground
  labels:
    app: dov
    name: dov-httproute
spec:
  parentRefs:
  - name: corp-gateway
    sectionName: http
  hostnames:
  - "fortune-gw.192.168.39.240.nip.io"
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    backendRefs:
    - name: fortune-svc
      port: 3000
